example-3-configmap/3-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "allowed-registries"
spec:
  policyName: "allowed-registries"
  validationActions: [Deny]
  paramRef:
    name: default-allowed-registries
    namespace: default
    parameterNotFoundAction: Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
